TLC/TP1/Ex3.1/output/Ex3_1Parser.java
// $ANTLR 3.5.1 /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g 2023-11-07 14:18:42

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings("all")
public class Ex3_1Parser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "EXPONENT", "FLOAT", 
		"ID", "INT", "WS", "'('", "')'", "'*'", "'+'", "'-'", "'/'", "';'", "'='", 
		"'set'"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int COMMENT=4;
	public static final int EXPONENT=5;
	public static final int FLOAT=6;
	public static final int ID=7;
	public static final int INT=8;
	public static final int WS=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "mul", "div", "num", "uni", "ope", "add", "ex3_1", "opeExp", 
		"declaration", "divExp", "minus", "mulExp", "addExp", "minusExp", "uniExp", 
		"input"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public Ex3_1Parser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public Ex3_1Parser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this, port, null);

		setDebugListener(proxy);
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public Ex3_1Parser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());
	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override public String[] getTokenNames() { return Ex3_1Parser.tokenNames; }
	@Override public String getGrammarFileName() { return "/mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g"; }

	 
		java.util.Map<String,Double> variables = new java.util.HashMap(); 



	// $ANTLR start "add"
	// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:39:1: add : minus ( '+' add )? ;
	public final void add() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "add");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(39, 0);

		try {
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:39:5: ( minus ( '+' add )? )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:39:7: minus ( '+' add )?
			{
			dbg.location(39,7);
			pushFollow(FOLLOW_minus_in_add315);
			minus();
			state._fsp--;
			dbg.location(39,12);
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:39:12: ( '+' add )?
			int alt1=2;
			try { dbg.enterSubRule(1);
			try { dbg.enterDecision(1, decisionCanBacktrack[1]);

			int LA1_0 = input.LA(1);
			if ( (LA1_0==13) ) {
				alt1=1;
			}
			} finally {dbg.exitDecision(1);}

			switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:39:13: '+' add
					{
					dbg.location(39,13);
					match(input,13,FOLLOW_13_in_add317); dbg.location(39,16);
					pushFollow(FOLLOW_add_in_add318);
					add();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(1);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(39, 20);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "add");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "add"



	// $ANTLR start "minus"
	// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:41:1: minus : mul ( '-' minus )? ;
	public final void minus() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "minus");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(41, 0);

		try {
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:41:7: ( mul ( '-' minus )? )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:41:9: mul ( '-' minus )?
			{
			dbg.location(41,9);
			pushFollow(FOLLOW_mul_in_minus329);
			mul();
			state._fsp--;
			dbg.location(41,12);
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:41:12: ( '-' minus )?
			int alt2=2;
			try { dbg.enterSubRule(2);
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			int LA2_0 = input.LA(1);
			if ( (LA2_0==14) ) {
				alt2=1;
			}
			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:41:13: '-' minus
					{
					dbg.location(41,13);
					match(input,14,FOLLOW_14_in_minus331); dbg.location(41,16);
					pushFollow(FOLLOW_minus_in_minus332);
					minus();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(2);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(41, 22);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "minus");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "minus"



	// $ANTLR start "mul"
	// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:43:1: mul : div ( '*' mul )? ;
	public final void mul() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "mul");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(43, 0);

		try {
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:43:5: ( div ( '*' mul )? )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:43:7: div ( '*' mul )?
			{
			dbg.location(43,7);
			pushFollow(FOLLOW_div_in_mul342);
			div();
			state._fsp--;
			dbg.location(43,10);
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:43:10: ( '*' mul )?
			int alt3=2;
			try { dbg.enterSubRule(3);
			try { dbg.enterDecision(3, decisionCanBacktrack[3]);

			int LA3_0 = input.LA(1);
			if ( (LA3_0==12) ) {
				alt3=1;
			}
			} finally {dbg.exitDecision(3);}

			switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:43:11: '*' mul
					{
					dbg.location(43,11);
					match(input,12,FOLLOW_12_in_mul344); dbg.location(43,14);
					pushFollow(FOLLOW_mul_in_mul345);
					mul();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(3);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(43, 18);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "mul");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "mul"



	// $ANTLR start "div"
	// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:45:1: div : uni ( '/' div )? ;
	public final void div() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "div");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(45, 0);

		try {
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:45:5: ( uni ( '/' div )? )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:45:7: uni ( '/' div )?
			{
			dbg.location(45,7);
			pushFollow(FOLLOW_uni_in_div356);
			uni();
			state._fsp--;
			dbg.location(45,10);
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:45:10: ( '/' div )?
			int alt4=2;
			try { dbg.enterSubRule(4);
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==15) ) {
				alt4=1;
			}
			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:45:11: '/' div
					{
					dbg.location(45,11);
					match(input,15,FOLLOW_15_in_div358); dbg.location(45,14);
					pushFollow(FOLLOW_div_in_div359);
					div();
					state._fsp--;

					}
					break;

			}
			} finally {dbg.exitSubRule(4);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(45, 18);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "div");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "div"



	// $ANTLR start "uni"
	// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:47:1: uni : ( '-' )? ope ;
	public final void uni() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "uni");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(47, 0);

		try {
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:47:5: ( ( '-' )? ope )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:47:7: ( '-' )? ope
			{
			dbg.location(47,7);
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:47:7: ( '-' )?
			int alt5=2;
			try { dbg.enterSubRule(5);
			try { dbg.enterDecision(5, decisionCanBacktrack[5]);

			int LA5_0 = input.LA(1);
			if ( (LA5_0==14) ) {
				alt5=1;
			}
			} finally {dbg.exitDecision(5);}

			switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:47:7: '-'
					{
					dbg.location(47,7);
					match(input,14,FOLLOW_14_in_uni369); 
					}
					break;

			}
			} finally {dbg.exitSubRule(5);}
			dbg.location(47,11);
			pushFollow(FOLLOW_ope_in_uni371);
			ope();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(47, 13);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "uni");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "uni"



	// $ANTLR start "ope"
	// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:49:1: ope : ( ( WS )* ( INT | FLOAT ) ( WS )* | '(' add ')' );
	public final void ope() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "ope");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(49, 0);

		try {
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:49:5: ( ( WS )* ( INT | FLOAT ) ( WS )* | '(' add ')' )
			int alt8=2;
			try { dbg.enterDecision(8, decisionCanBacktrack[8]);

			int LA8_0 = input.LA(1);
			if ( (LA8_0==FLOAT||(LA8_0 >= INT && LA8_0 <= WS)) ) {
				alt8=1;
			}
			else if ( (LA8_0==10) ) {
				alt8=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(8);}

			switch (alt8) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:49:7: ( WS )* ( INT | FLOAT ) ( WS )*
					{
					dbg.location(49,7);
					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:49:7: ( WS )*
					try { dbg.enterSubRule(6);

					loop6:
					while (true) {
						int alt6=2;
						try { dbg.enterDecision(6, decisionCanBacktrack[6]);

						int LA6_0 = input.LA(1);
						if ( (LA6_0==WS) ) {
							alt6=1;
						}

						} finally {dbg.exitDecision(6);}

						switch (alt6) {
						case 1 :
							dbg.enterAlt(1);

							// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:49:7: WS
							{
							dbg.location(49,7);
							match(input,WS,FOLLOW_WS_in_ope379); 
							}
							break;

						default :
							break loop6;
						}
					}
					} finally {dbg.exitSubRule(6);}
					dbg.location(49,11);
					if ( input.LA(1)==FLOAT||input.LA(1)==INT ) {
						input.consume();
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						dbg.recognitionException(mse);
						throw mse;
					}dbg.location(49,23);
					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:49:23: ( WS )*
					try { dbg.enterSubRule(7);

					loop7:
					while (true) {
						int alt7=2;
						try { dbg.enterDecision(7, decisionCanBacktrack[7]);

						int LA7_0 = input.LA(1);
						if ( (LA7_0==WS) ) {
							alt7=1;
						}

						} finally {dbg.exitDecision(7);}

						switch (alt7) {
						case 1 :
							dbg.enterAlt(1);

							// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:49:23: WS
							{
							dbg.location(49,23);
							match(input,WS,FOLLOW_WS_in_ope388); 
							}
							break;

						default :
							break loop7;
						}
					}
					} finally {dbg.exitSubRule(7);}

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:49:29: '(' add ')'
					{
					dbg.location(49,29);
					match(input,10,FOLLOW_10_in_ope393); dbg.location(49,33);
					pushFollow(FOLLOW_add_in_ope395);
					add();
					state._fsp--;
					dbg.location(49,37);
					match(input,11,FOLLOW_11_in_ope397); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(49, 39);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "ope");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "ope"



	// $ANTLR start "ex3_1"
	// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:51:1: ex3_1 : add ;
	public final void ex3_1() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "ex3_1");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(51, 0);

		try {
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:51:7: ( add )
			dbg.enterAlt(1);

			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:51:9: add
			{
			dbg.location(51,9);
			pushFollow(FOLLOW_add_in_ex3_1406);
			add();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(51, 11);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "ex3_1");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "ex3_1"



	// $ANTLR start "num"
	// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:54:1: num returns [Double val] : ( ( WS )* (var= ID ) ( WS )* |a= ( ( WS )* ( INT | FLOAT ) ( WS )* ) | ( '(' x= addExp ')' ) );
	public final Double num() throws RecognitionException {
		Double val = null;


		Token var=null;
		Token a=null;
		Double x =null;

		try { dbg.enterRule(getGrammarFileName(), "num");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(54, 0);

		try {
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:54:26: ( ( WS )* (var= ID ) ( WS )* |a= ( ( WS )* ( INT | FLOAT ) ( WS )* ) | ( '(' x= addExp ')' ) )
			int alt13=3;
			try { dbg.enterDecision(13, decisionCanBacktrack[13]);

			try {
				isCyclicDecision = true;
				alt13 = dfa13.predict(input);
			}
			catch (NoViableAltException nvae) {
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(13);}

			switch (alt13) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:55:3: ( WS )* (var= ID ) ( WS )*
					{
					dbg.location(55,3);
					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:55:3: ( WS )*
					try { dbg.enterSubRule(9);

					loop9:
					while (true) {
						int alt9=2;
						try { dbg.enterDecision(9, decisionCanBacktrack[9]);

						int LA9_0 = input.LA(1);
						if ( (LA9_0==WS) ) {
							alt9=1;
						}

						} finally {dbg.exitDecision(9);}

						switch (alt9) {
						case 1 :
							dbg.enterAlt(1);

							// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:55:3: WS
							{
							dbg.location(55,3);
							match(input,WS,FOLLOW_WS_in_num422); 
							}
							break;

						default :
							break loop9;
						}
					}
					} finally {dbg.exitSubRule(9);}
					dbg.location(55,6);
					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:55:6: (var= ID )
					dbg.enterAlt(1);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:55:7: var= ID
					{
					dbg.location(55,11);
					var=(Token)match(input,ID,FOLLOW_ID_in_num429); 
					}
					dbg.location(55,16);
					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:55:16: ( WS )*
					try { dbg.enterSubRule(10);

					loop10:
					while (true) {
						int alt10=2;
						try { dbg.enterDecision(10, decisionCanBacktrack[10]);

						int LA10_0 = input.LA(1);
						if ( (LA10_0==WS) ) {
							alt10=1;
						}

						} finally {dbg.exitDecision(10);}

						switch (alt10) {
						case 1 :
							dbg.enterAlt(1);

							// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:55:16: WS
							{
							dbg.location(55,16);
							match(input,WS,FOLLOW_WS_in_num431); 
							}
							break;

						default :
							break loop10;
						}
					}
					} finally {dbg.exitSubRule(10);}
					dbg.location(55,20);
					val = variables.get((var!=null?var.getText():null));
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:56:4: a= ( ( WS )* ( INT | FLOAT ) ( WS )* )
					{
					dbg.location(56,5);
					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:56:7: ( ( WS )* ( INT | FLOAT ) ( WS )* )
					dbg.enterAlt(1);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:56:8: ( WS )* ( INT | FLOAT ) ( WS )*
					{
					dbg.location(56,8);
					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:56:8: ( WS )*
					try { dbg.enterSubRule(11);

					loop11:
					while (true) {
						int alt11=2;
						try { dbg.enterDecision(11, decisionCanBacktrack[11]);

						int LA11_0 = input.LA(1);
						if ( (LA11_0==WS) ) {
							alt11=1;
						}

						} finally {dbg.exitDecision(11);}

						switch (alt11) {
						case 1 :
							dbg.enterAlt(1);

							// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:56:8: WS
							{
							dbg.location(56,8);
							a=(Token)match(input,WS,FOLLOW_WS_in_num443); 
							}
							break;

						default :
							break loop11;
						}
					}
					} finally {dbg.exitSubRule(11);}
					dbg.location(56,12);
					a=input.LT(1);
					if ( input.LA(1)==FLOAT||input.LA(1)==INT ) {
						input.consume();
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						dbg.recognitionException(mse);
						throw mse;
					}dbg.location(56,24);
					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:56:24: ( WS )*
					try { dbg.enterSubRule(12);

					loop12:
					while (true) {
						int alt12=2;
						try { dbg.enterDecision(12, decisionCanBacktrack[12]);

						int LA12_0 = input.LA(1);
						if ( (LA12_0==WS) ) {
							alt12=1;
						}

						} finally {dbg.exitDecision(12);}

						switch (alt12) {
						case 1 :
							dbg.enterAlt(1);

							// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:56:24: WS
							{
							dbg.location(56,24);
							a=(Token)match(input,WS,FOLLOW_WS_in_num452); 
							}
							break;

						default :
							break loop12;
						}
					}
					} finally {dbg.exitSubRule(12);}

					}
					dbg.location(56,29);
					 val = Double.parseDouble((a!=null?a.getText():null)); 
					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:57:5: ( '(' x= addExp ')' )
					{
					dbg.location(57,5);
					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:57:5: ( '(' x= addExp ')' )
					dbg.enterAlt(1);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:57:6: '(' x= addExp ')'
					{
					dbg.location(57,6);
					match(input,10,FOLLOW_10_in_num464); dbg.location(57,11);
					pushFollow(FOLLOW_addExp_in_num469);
					x=addExp();
					state._fsp--;
					dbg.location(57,19);
					val = x; dbg.location(57,37);
					match(input,11,FOLLOW_11_in_num472); 
					}

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(58, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "num");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return val;
	}
	// $ANTLR end "num"



	// $ANTLR start "uniExp"
	// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:60:1: uniExp returns [Double val] : ( (a= num ) | ( '-' x= num ) );
	public final Double uniExp() throws RecognitionException {
		Double val = null;


		Double a =null;
		Double x =null;

		try { dbg.enterRule(getGrammarFileName(), "uniExp");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(60, 0);

		try {
			// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:60:29: ( (a= num ) | ( '-' x= num ) )
			int alt14=2;
			try { dbg.enterDecision(14, decisionCanBacktrack[14]);

			int LA14_0 = input.LA(1);
			if ( ((LA14_0 >= FLOAT && LA14_0 <= 10)) ) {
				alt14=1;
			}
			else if ( (LA14_0==14) ) {
				alt14=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 14, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(14);}

			switch (alt14) {
				case 1 :
					dbg.enterAlt(1);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:61:2: (a= num )
					{
					dbg.location(61,2);
					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:61:2: (a= num )
					dbg.enterAlt(1);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:61:4: a= num
					{
					dbg.location(61,5);
					pushFollow(FOLLOW_num_in_uniExp496);
					a=num();
					state._fsp--;
					dbg.location(61,11);
					 val = a;  
					}

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:62:5: ( '-' x= num )
					{
					dbg.location(62,5);
					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:62:5: ( '-' x= num )
					dbg.enterAlt(1);

					// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:62:6: '-' x= num
					{
					dbg.location(62,6);
					match(input,14,FOLLOW_14_in_uniExp507); dbg.location(62,11);
					pushFollow(FOLLOW_num_in_uniExp512);
					x=num();
					state._fsp--;
					dbg.location(62,16);
					val -= x; 
					}

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(63, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "uniExp");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return val;
	}
	// $ANTLR end "uniExp"



	// $ANTLR start "divExp"
	// /mnt/DATA/cours/ESIR2_GIT/TLC/TP1/Ex3.1/Ex3_1.g:65:1: divExp returns [Double val] : (b= uniExp ) ( '/' (c= uniExp ) )* ;
	public final Double divExp() throws RecognitionException {
		Double val = null;


		Double b =null;
		Double c =null;

		try { dbg.enterRule(getGrammarFileName(), "divExp");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(65, 0);
